added speak component

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Stencil Component Starter</title>
 
     <script type="module" src="/build/tj-language-tools.esm.js"></script>
-    <script nomodule src="/build/tj-language-tools.js"></script>
+    <!-- <script nomodule src="/build/tj-language-tools.js"></script> -->
     <style>
       html {
         --color-theme: green;
@@ -24,6 +24,8 @@
       break
       This is a not. Is not.
     </tj-read-lines>
+    <tj-speak>Testing 123</tj-speak>
+    <tj-speak set-lang="fr-FR">Bonjour!</tj-speak>
   </body>
 </html>
 
