--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
 
-    <script type="module" src="/build/tj-language-tools.esm.js"></script>
-    <!-- <script nomodule src="/build/tj-language-tools.js"></script> -->
-    <style>
-      html {
-        --color-theme: green;
-        --color-theme-inverse: purple;
-        --color-theme-highlight: red;
-      }
-    </style>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
+  <title>Stencil Component Starter</title>
+  <!-- Required for Translation Service -->
+  <script type="text/javascript"
+    src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="module" src="/build/tj-language-tools.esm.js"></script>
+  <!-- <script nomodule src="/build/tj-language-tools.js"></script> -->
+  <style>
+    html {
+      --color-theme: green;
+      --color-theme-inverse: #e5d5eb;
+      --color-theme-highlight: red;
+    }
+  </style>
 
-  </head>
-  <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-    <br>
-    <tj-read-lines>this is a test. It should parse the line. Did it work? Yes?
-      This is a line 
-      break
-      This is a not. Is not.
-    </tj-read-lines>
-    <tj-speak>Testing 123</tj-speak>
-    <tj-speak set-lang="fr-FR">Bonjour!</tj-speak>
-  </body>
+</head>
+
+<body>
+  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <br>
+  <tj-read-lines>this is a test. It should parse the line. Did it work? Yes?
+    This is a line
+    break
+    This is a not. Is not.
+  </tj-read-lines>
+  <tj-speak>Testing 123</tj-speak>
+  <tj-speak set-lang="fr-FR">Bonjour!</tj-speak>
+  <tj-set-translation-language></tj-set-translation-language>
+</body>
+
 </html>
-
-
-
